@@ -1,3 +1,9 @@
+9/12/2015
+---------
+-Added credentials/mimikatz/mimitokens to take advantage of Mimikatz' token listing/elevation
+-Added management/enable_multi_rdp to patch terminal services to allow mutiple connections
+-Fixed bug in write_dllhijacker that prevented the dll from being written out
+
 ============
 8/30/2015 - RELEASE 1.2
 ============
